{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 29,
  "lineage": "74c9ae35-2fec-586f-87d2-36704d13879b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d8d21675359af02",
            "domain": "vpc",
            "id": "eipalloc-05d8d21675359af02",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-233-218-178.compute-1.amazonaws.com",
            "public_ip": "3.233.218.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8svpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:internet-gateway/igw-02bd1d4d670974f42",
            "id": "igw-02bd1d4d670974f42",
            "owner_id": "528757803671",
            "tags": {
              "Name": "k8svpc-igw"
            },
            "tags_all": {
              "Name": "k8svpc-igw"
            },
            "vpc_id": "vpc-09b3a96a78e2e2f01"
          },
          "dependencies": [
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "k8s-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05d8d21675359af02",
            "association_id": "eipassoc-06044f5586660c217",
            "connectivity_type": "public",
            "id": "nat-08899b7836ea0bf5d",
            "network_interface_id": "eni-0679ac1741ea6d23c",
            "private_ip": "192.168.74.247",
            "public_ip": "3.233.218.178",
            "subnet_id": "subnet-0fef6255de639dda9",
            "tags": {
              "Name": "k8s-nat"
            },
            "tags_all": {
              "Name": "k8s-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.k8svpc-igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:route-table/rtb-0f4c8ae5e772566b6",
            "id": "rtb-0f4c8ae5e772566b6",
            "owner_id": "528757803671",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08899b7836ea0bf5d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b3a96a78e2e2f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.k8svpc-igw",
            "aws_nat_gateway.k8s-nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:route-table/rtb-08d0c4725cc050fce",
            "id": "rtb-08d0c4725cc050fce",
            "owner_id": "528757803671",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02bd1d4d670974f42",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b3a96a78e2e2f01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k8svpc-igw",
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec52894c56882986",
            "route_table_id": "rtb-0f4c8ae5e772566b6",
            "subnet_id": "subnet-0471a20e29da528a9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.k8svpc-igw",
            "aws_nat_gateway.k8s-nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061b3b2e3a21bcda1",
            "route_table_id": "rtb-0f4c8ae5e772566b6",
            "subnet_id": "subnet-053cf649eeda54218"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.k8svpc-igw",
            "aws_nat_gateway.k8s-nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048f122d714fd87e0",
            "route_table_id": "rtb-08d0c4725cc050fce",
            "subnet_id": "subnet-0fef6255de639dda9"
          },
          "dependencies": [
            "aws_internet_gateway.k8svpc-igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095c0346407f48bdc",
            "route_table_id": "rtb-08d0c4725cc050fce",
            "subnet_id": "subnet-0b71629bb4c40430c"
          },
          "dependencies": [
            "aws_internet_gateway.k8svpc-igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:subnet/subnet-0471a20e29da528a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0471a20e29da528a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528757803671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09b3a96a78e2e2f01"
          },
          "dependencies": [
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:subnet/subnet-053cf649eeda54218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053cf649eeda54218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528757803671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09b3a96a78e2e2f01"
          },
          "dependencies": [
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:subnet/subnet-0fef6255de639dda9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fef6255de639dda9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528757803671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09b3a96a78e2e2f01"
          },
          "dependencies": [
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:subnet/subnet-0b71629bb4c40430c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b71629bb4c40430c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "528757803671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09b3a96a78e2e2f01"
          },
          "dependencies": [
            "aws_vpc.k8svpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8svpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528757803671:vpc/vpc-09b3a96a78e2e2f01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06eb89e4e06b779d8",
            "default_route_table_id": "rtb-06a5ead05afe95a4c",
            "default_security_group_id": "sg-0b0d6c49e937abe53",
            "dhcp_options_id": "dopt-01eac815e3b390469",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09b3a96a78e2e2f01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a5ead05afe95a4c",
            "owner_id": "528757803671",
            "tags": {
              "Name": "k8svpc"
            },
            "tags_all": {
              "Name": "k8svpc"
            }
          }
        }
      ]
    }
  ]
}